--- a/index.html
+++ b/index.html
@@ -1,23 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bloxd.io Hack Loader</title>
-    <style>
-      body { font-family: sans-serif; background: #111; color: #0f0; text-align: center; padding-top: 50px; }
-      button { padding: 15px 25px; font-size: 18px; cursor: pointer; background: #0f0; border: none; color: #000; }
-    </style>
-  </head>
-  <body>
-    <h1>Bloxd.io Hack Loader</h1>
-    <p>Haz clic para cargar el hack dentro del juego</p>
-    <button onclick="loadHack()">Cargar Hack</button>
+<head>
+  <title>Bloxd.io Hack Menu</title>
+  <style>
+    body {
+      background-color: #111;
+      color: #0f0;
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 50px;
+    }
+    .menu {
+      background: #222;
+      border: 2px solid #0f0;
+      border-radius: 10px;
+      padding: 20px;
+      display: inline-block;
+    }
+    .menu h2 {
+      margin-bottom: 10px;
+    }
+    .toggle {
+      padding: 10px 20px;
+      background: #0f0;
+      color: #000;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .range-input {
+      width: 200px;
+    }
+  </style>
+</head>
+<body>
+  <div class="menu">
+    <h2>Bloxd.io Kill Aura</h2>
+    <button id="toggleAura" class="toggle">Activar Kill Aura</button><br><br>
+    <label for="range">Rango de ataque: <span id="rangeVal">5.5</span></label><br>
+    <input type="range" id="range" min="1" max="10" step="0.1" value="5.5" class="range-input">
+  </div>
 
-    <script>
-      function loadHack() {
-        const script = document.createElement('script');
-        script.src = 'hack.js'; // Este archivo lo crearemos ahora
-        document.body.appendChild(script);
+  <script>
+    let auraActive = false;
+    let intervalId = null;
+    let attackRange = 5.5;
+
+    const updateRange = () => {
+      attackRange = parseFloat(document.getElementById("range").value);
+      document.getElementById("rangeVal").textContent = attackRange.toFixed(1);
+    };
+
+    document.getElementById("range").addEventListener("input", updateRange);
+
+    const toggleBtn = document.getElementById("toggleAura");
+    toggleBtn.onclick = () => {
+      auraActive = !auraActive;
+      toggleBtn.textContent = auraActive ? "Desactivar Kill Aura" : "Activar Kill Aura";
+
+      if (auraActive) {
+        intervalId = setInterval(() => {
+          try {
+            const all = [];
+            for (const k in window) {
+              const v = window[k];
+              if (v && typeof v === "object") {
+                try {
+                  for (const o of Object.values(v)) {
+                    if (o && typeof o.hp === "number" && typeof o.x === "number") {
+                      all.push(o);
+                    }
+                  }
+                } catch {}
+              }
+            }
+
+            const player = all.find(e => e?.isPlayer);
+            if (!player) return;
+
+            const enemies = all.filter(
+              e => e !== player && e.hp > 0 && Math.hypot(e.x - player.x, e.y - player.y) <= attackRange
+            );
+
+            const attack = Object.values(window).find(
+              f => typeof f === "function" && f.toString().includes(".hp")
+            );
+
+            if (attack) {
+              for (const enemy of enemies) {
+                attack(enemy);
+              }
+            }
+          } catch {}
+        }, 75);
+      } else {
+        clearInterval(intervalId);
+        intervalId = null;
       }
-    </script>
-  </body>
+    };
+  </script>
+</body>
 </html>
